--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -8,9 +8,6 @@ on:
         required: true
         type: string
     secrets:
-      ACTIONS_TOKEN:
-        description: 'GitHub token for repository operations'
-        required: true
       ANTHROPIC_API_KEY:
         description: 'API key for Claude changelog generation'
         required: true
@@ -39,9 +36,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: ${{ vars.REPOSITORY_NAME || 'RoboFinSystems/roboledger-app' }}
+          repository: ${{ github.repository }}
           ref: ${{ inputs.branch_ref }}
-          token: ${{ secrets.ACTIONS_TOKEN }}
+          token: ${{ github.token }}
           fetch-depth: 0
 
       - name: Get Version from package.json
@@ -112,23 +109,27 @@ jobs:
           echo "pages_changed=$PAGES_CHANGED" >> $GITHUB_OUTPUT
           echo "styles_changed=$STYLES_CHANGED" >> $GITHUB_OUTPUT
 
-          # Save multiline outputs
+          # Save multiline outputs using unique delimiters to avoid conflicts with content
+          DELIMITER_1="GHOUTPUT_$(date +%s)_COMMIT"
+          DELIMITER_2="GHOUTPUT_$(date +%s)_CHANGES"
+          DELIMITER_3="GHOUTPUT_$(date +%s)_PRREFS"
+
           {
-            echo "commit_messages<<EOF"
+            echo "commit_messages<<$DELIMITER_1"
             echo "$COMMIT_MESSAGES"
-            echo "EOF"
+            echo "$DELIMITER_1"
           } >> $GITHUB_OUTPUT
 
           {
-            echo "detailed_changes<<EOF"
+            echo "detailed_changes<<$DELIMITER_2"
             echo "$DETAILED_CHANGES"
-            echo "EOF"
+            echo "$DELIMITER_2"
           } >> $GITHUB_OUTPUT
 
           {
-            echo "pr_refs<<EOF"
+            echo "pr_refs<<$DELIMITER_3"
             echo "$PR_REFS"
-            echo "EOF"
+            echo "$DELIMITER_3"
           } >> $GITHUB_OUTPUT
 
       - name: Generate changelog with Claude
@@ -275,15 +276,15 @@ jobs:
             ## 🔗 Links
 
             - **Live App:** [roboledger.ai](https://roboledger.ai)
-            - **Full Changelog:** [${{ steps.analyze-changes.outputs.last_tag }}...v${{ steps.get-version.outputs.version }}](https://github.com/${{ vars.REPOSITORY_NAME || 'RoboFinSystems/roboledger-app' }}/compare/${{ steps.analyze-changes.outputs.last_tag }}...v${{ steps.get-version.outputs.version }})
-            - **All Releases:** [View all releases](https://github.com/${{ vars.REPOSITORY_NAME || 'RoboFinSystems/roboledger-app' }}/releases)
+            - **Full Changelog:** [${{ steps.analyze-changes.outputs.last_tag }}...v${{ steps.get-version.outputs.version }}](https://github.com/${{ github.repository }}/compare/${{ steps.analyze-changes.outputs.last_tag }}...v${{ steps.get-version.outputs.version }})
+            - **All Releases:** [View all releases](https://github.com/${{ github.repository }}/releases)
 
             ---
             🤖 Generated with [Claude Code](https://claude.ai/code)
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
 
       - name: Create release summary
         if: steps.check-tag.outputs.tag_exists == 'false'
@@ -292,7 +293,7 @@ jobs:
 
           echo "## 🚀 RoboLedger v$VERSION Released" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Release URL:** [v$VERSION](https://github.com/${{ vars.REPOSITORY_NAME || 'RoboFinSystems/roboledger-app' }}/releases/tag/v$VERSION)" >> $GITHUB_STEP_SUMMARY
+          echo "**Release URL:** [v$VERSION](https://github.com/${{ github.repository }}/releases/tag/v$VERSION)" >> $GITHUB_STEP_SUMMARY
           echo "**Live App:** [roboledger.ai](https://roboledger.ai)" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📊 Frontend Statistics" >> $GITHUB_STEP_SUMMARY
@@ -312,7 +313,7 @@ jobs:
         run: |
           VERSION="${{ steps.get-version.outputs.version }}"
           TAG_NAME="v$VERSION"
-          RELEASE_URL="https://github.com/${{ vars.REPOSITORY_NAME || 'RoboFinSystems/roboledger-app' }}/releases/tag/$TAG_NAME"
+          RELEASE_URL="https://github.com/${{ github.repository }}/releases/tag/$TAG_NAME"
 
           echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
           echo "version=$VERSION" >> $GITHUB_OUTPUT
