--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -12,6 +12,7 @@ concurrency:
 
 on:
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   runner:
@@ -27,7 +28,7 @@ jobs:
         with:
           repository: ${{ github.repository }}
           ref: ${{ github.ref }}
-          token: ${{ secrets.ACTIONS_TOKEN }}
+          token: ${{ github.token }}
 
       - name: Check runner availability
         id: check
@@ -35,15 +36,14 @@ jobs:
         with:
           runner_labels: ${{ vars.RUNNER_LABELS || 'github-hosted' }}
           runner_scope: ${{ vars.RUNNER_SCOPE || 'both' }}
-          github_token: ${{ secrets.ACTIONS_TOKEN }}
+          github_token: ${{ github.token }}
 
   test:
     needs: [runner]
     uses: ./.github/workflows/test.yml
     with:
       runner_config: ${{ needs.runner.outputs.runner_config }}
-    secrets:
-      ACTIONS_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
+    secrets: inherit
 
   create-deployment:
     needs: [runner, test]
@@ -55,13 +55,13 @@ jobs:
         id: deployment
         uses: chrnorm/deployment-action@v2
         with:
-          token: ${{ secrets.ACTIONS_TOKEN }}
+          token: ${{ github.token }}
           environment: staging
           description: 'Staging Deployment Created'
       - name: Update Deployment Status
         uses: chrnorm/deployment-status@v2
         with:
-          token: ${{ secrets.ACTIONS_TOKEN }}
+          token: ${{ github.token }}
           state: in_progress
           deployment-id: ${{ steps.deployment.outputs.deployment_id }}
           description: 'Staging Deployment In Progress'
@@ -76,8 +76,7 @@ jobs:
       aws_account_id: ${{ vars.AWS_ACCOUNT_ID }}
       aws_region: ${{ vars.AWS_REGION || 'us-east-1' }}
       namespace: ${{ vars.AWS_ACCOUNT_ID }}
-    secrets:
-      ACTIONS_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
+    secrets: inherit
 
   build:
     needs: [runner, test, deploy-s3]
@@ -95,10 +94,7 @@ jobs:
       static_assets_bucket_name: ${{ needs.deploy-s3.outputs.static_assets_bucket_name }}
       # Docker Hub publishing for staging: disabled (staging builds should not go to Docker Hub)
       publish_to_dockerhub: false
-    secrets:
-      ACTIONS_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
-      DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+    secrets: inherit
 
   deploy-app:
     needs: [runner, create-deployment, deploy-s3, build]
@@ -130,8 +126,7 @@ jobs:
       # Domain & DNS Configuration (required for public mode)
       domain_name: ${{ vars.DOMAIN_NAME_STAGING || 'staging.roboledger.ai' }}
       domain_name_root: ${{ vars.DOMAIN_NAME_ROOT || 'roboledger.ai' }}
-    secrets:
-      ACTIONS_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
+    secrets: inherit
 
   deployment-successful:
     needs: [runner, create-deployment, build, deploy-app]
@@ -142,7 +137,7 @@ jobs:
       - name: Update Deployment Status
         uses: chrnorm/deployment-status@v2
         with:
-          token: ${{ secrets.ACTIONS_TOKEN }}
+          token: ${{ github.token }}
           state: success
           deployment-id: ${{ needs.create-deployment.outputs.deployment_id }}
           description: 'Staging Deployment Succeeded'
@@ -157,11 +152,11 @@ jobs:
         with:
           repository: ${{ github.repository }}
           ref: ${{ github.ref }}
-          token: ${{ secrets.ACTIONS_TOKEN }}
+          token: ${{ github.token }}
 
       - name: Handle Deployment Failure
         uses: ./.github/actions/handle-deployment-failure
         with:
           deployment-id: ${{ needs.create-deployment.outputs.deployment_id }}
           environment: staging
-          github-token: ${{ secrets.ACTIONS_TOKEN }}
+          github-token: ${{ github.token }}
