--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,6 @@ on:
         required: true
         type: string
         description: 'Runner configuration JSON (from runner availability check)'
-    secrets:
-      ACTIONS_TOKEN:
-        required: true
 
 jobs:
   test:
@@ -39,9 +36,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: ${{ vars.REPOSITORY_NAME || 'RoboFinSystems/roboledger-app' }}
+          repository: ${{ github.repository }}
           ref: ${{ github.ref }}
-          token: ${{ secrets.ACTIONS_TOKEN }}
+          token: ${{ github.token }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
