--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -34,10 +34,8 @@ jobs:
       - name: Checkout main branch
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository }}
           ref: main
           fetch-depth: 0
-          token: ${{ github.token }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -79,6 +77,20 @@ jobs:
 
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+          echo "New version: $NEW_VERSION"
+          echo "Branch name: $BRANCH_NAME"
+
+      - name: Check if branch already exists
+        run: |
+          BRANCH_NAME="${{ steps.new-version.outputs.branch_name }}"
+
+          # Check if branch exists locally or remotely
+          if git show-ref --verify --quiet refs/heads/$BRANCH_NAME || git show-ref --verify --quiet refs/remotes/origin/$BRANCH_NAME; then
+            echo "❌ Branch $BRANCH_NAME already exists"
+            exit 1
+          else
+            echo "✅ Branch $BRANCH_NAME does not exist, proceeding..."
+          fi
 
       - name: Configure Git
         run: |
