Update GitHub Actions workflows to use dynamic image tags
- Changed the ecr_image_tag in both prod.yml and staging.yml to use the version_tag output from the build job, ensuring that the correct image version is deployed.
- Updated documentation in gha-setup.sh to clarify the setup process for GitHub variables related to CI/CD pipelines for the RoboLedger App.

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -116,7 +116,7 @@ jobs:
       static_assets_bucket_domain: ${{ needs.deploy-s3.outputs.static_assets_bucket_domain }}
       # Container & Application Configuration
       ecr_repository: ${{ vars.ECR_REPOSITORY || 'roboledger-app' }}
-      ecr_image_tag: latest
+      ecr_image_tag: ${{ needs.build.outputs.version_tag }}
       # App Runner Compute Configuration
       cpu: ${{ vars.CPU_PROD || '0.25 vCPU' }}
       memory: ${{ vars.MEMORY_PROD || '0.5 GB' }}
