Refactor GitHub Actions workflow dependencies for clarity
- Updated the 'needs' syntax in create-release.yml for better readability by formatting the job dependencies as lists.
- Ensured consistency in the workflow structure to enhance maintainability and understanding of deployment order.

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -202,7 +202,8 @@ jobs:
           echo "✅ Staging deployment dispatched: https://github.com/${{ github.repository }}/actions/runs/$RUN_ID"
 
   deploy-prod-dispatch:
-    needs: [create-branch, create-tag, check-deploy-method, deploy-staging-dispatch]
+    needs:
+      [create-branch, create-tag, check-deploy-method, deploy-staging-dispatch]
     if: |
       always() &&
       needs.check-deploy-method.outputs.use_dispatch == 'true' &&
@@ -265,7 +266,8 @@ jobs:
     secrets: inherit
 
   deploy-prod-reusable:
-    needs: [create-branch, create-tag, check-deploy-method, deploy-staging-reusable]
+    needs:
+      [create-branch, create-tag, check-deploy-method, deploy-staging-reusable]
     if: |
       always() &&
       needs.check-deploy-method.outputs.use_dispatch == 'false' &&
