--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -115,7 +115,7 @@ jobs:
       static_assets_bucket_domain: ${{ needs.deploy-s3.outputs.static_assets_bucket_domain }}
       # Container & Application Configuration
       ecr_repository: ${{ vars.ECR_REPOSITORY || 'roboledger-app' }}
-      ecr_image_tag: ${{ needs.build.outputs.version_tag }}
+      ecr_image_tag: ${{ needs.build.outputs.image_tag }}
       # App Runner Compute Configuration
       cpu: ${{ vars.CPU_STAGING || '0.25 vCPU' }}
       memory: ${{ vars.MEMORY_STAGING || '0.5 GB' }}
