feat: add webpack option to development script in package.json

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "start": "next start",
     "dev": "PORT=3001 next dev",
+    "dev:webpack": "PORT=3001 next dev --webpack",
     "build": "next build",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
