--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@
 # =============================================================================
 NODE_ENV=development
 ENVIRONMENT=dev
+NEXT_PUBLIC_APP_NAME=roboledger
 
 # =============================================================================
 # FRONTEND APPLICATION URLS
