--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -127,6 +127,7 @@ jobs:
       # Domain & DNS Configuration (required for public mode)
       domain_name: ${{ vars.DOMAIN_NAME_PROD || 'roboledger.ai' }}
       domain_name_root: ${{ vars.DOMAIN_NAME_ROOT || 'roboledger.ai' }}
+      notification_email: ${{ vars.AWS_SNS_ALERT_EMAIL || '' }}
     secrets: inherit
 
   deployment-successful:
